# alt-ani-cli-win-shinden

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
src/alt_ani_cli/: __main__.py  cli.py  config.py  download.py  errors.py  history.py  models.py
src/alt_ani_cli/content/: __init__.py  exceptions_content_en-us.yaml  exceptions_content_pl-pl.yaml  ui_content_pl-pl.yaml
src/alt_ani_cli/extract/: __init__.py  common.py  dood.py  jwplayer.py  lycoris.py  mp4upload.py  streamtape.py  vidara.py  ytdlp_resolver.py
src/alt_ani_cli/flow/: handlers.py  state.py
src/alt_ani_cli/player/: __init__.py  mpv.py  runner.py  vlc.py
src/alt_ani_cli/shinden/: api.py  episode.py  http.py  metadata.py  models.py  search.py  series.py  utils.py
src/alt_ani_cli/ui/: menus.py  progress.py
tests/: conftest.py  test_api_flow.py  test_cli_args.py  test_cli_errors.py  test_episode.py  test_extract_mp4upload.py  test_flow_back.py  test_history.py  test_jwplayer_packer.py  test_menus.py  test_metadata.py  test_player_cmd_build.py  test_search.py  test_series.py  test_sort_players.py  test_utils.py
tests/cli/: test_args.py  test_errors.py  test_filter_players.py  test_quality.py
tests/content/: test_ui_labels.py
tests/extract/: test_dispatch.py  test_dood.py  test_jwplayer.py  test_lycoris.py  test_mp4upload.py  test_streamtape.py  test_vidara.py
tests/flow/: test_handlers.py
tests/player/: test_cmd_build.py
tests/shinden/: test_api.py  test_episode.py  test_http.py  test_metadata.py  test_search.py  test_series.py  test_utils.py
tests/ui/: test_menus.py
tools/: debug_embed.py  dump_search_html.py  spike_curl_cffi.py
