[project]
name = "alt-ani-cli-win"
version = "0.1.0"
requires-python = ">=3.14"
description = "CLI for watching and downloading anime from shinden.pl on Windows"
license = { text = "EUPL-1.2" }
authors = [{ name = "Aleksander Marszałkiewicz" }]
dependencies = [
    "httpx[http2]>=0.27",
    "selectolax>=0.3",
    "inquirerpy>=0.3",
    "yt-dlp>=2024.1",
    "platformdirs>=4.0",
    "rich>=13.0",
    "colorama>=0.4",
    "brotli>=1.2.0",
]

[dependency-groups]
dev = [
    "codespell>=2.4.2",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "respx>=0.23.1",
    "ruff>=0.15.12",
    "ty>=0.0.32",
]

[project.urls]
Repository = "https://github.com/Cybernetic-Ransomware/alt-ani-cli-win-shinden"

[project.scripts]
alt-ani-cli = "alt_ani_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alt_ani_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=html:tests/result/html --cov-report=term-missing -q"
markers = [
    "unit: tests with no external dependencies",
    "integration: tests requiring network access",
]

[tool.coverage.run]
data_file = "tests/result/.coverage"

[tool.ruff]
line-length = 128

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F841"]

[tool.ty.src]
exclude = ["tests/*", "tools/*"]

[tool.codespell]
skip = "./.git,./.github,./tests/*,./temp/*,./tools/*"
quiet-level = 3

[tool.mypy]
python_version = "3.14"
strict = true
