[project]
name = "alt-ani-cli-win"
version = "0.2.0"
requires-python = ">=3.14"
description = "CLI for watching and downloading anime from shinden.pl on Windows"
license = { text = "EUPL-1.2" }
authors = [{ name = "Aleksander Marszałkiewicz" }]
dependencies = [
    "selectolax>=0.3",
    "inquirerpy>=0.3",
    "yt-dlp>=2024.1",
    "platformdirs>=4.0",
    "rich>=13.0",
    "colorama>=0.4",
    "brotli>=1.2.0",
    "pyyaml>=6.0",
    "curl-cffi>=0.15.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "codespell>=2.4.2",
    "commitizen>=4.13.9",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
    "ty>=0.0.32",
]

[project.urls]
Repository = "https://github.com/Cybernetic-Ransomware/alt-ani-cli-win-shinden"

[project.scripts]
alt-ani-cli = "alt_ani_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alt_ani_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=html:tests/result/html --cov-report=term-missing -q -m 'not integration' --junitxml=tests/result/pytest_result.xml"
markers = [
    "unit: tests with no external dependencies",
    "integration: tests requiring network access",
]

[tool.coverage.run]
data_file = "tests/result/.coverage"

[tool.ruff]
line-length = 128

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 128

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F841", "E501"]
"test_*.py" = ["F401", "F841"]

[tool.ty.src]
exclude = ["tests/*", "tools/*"]

[tool.codespell]
skip = "./.git,./.github,./tests/*,./temp/*,./tools/*"
builtin = "clear"
quiet-level = 3
ignore-words-list = "daty,serie,autor"

[tool.bandit]
skips = ["B404", "B603"]
exclude_dirs = ["tests", "tools"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "src/alt_ani_cli/__init__.py:__version__",
]
change_type_order = ["feat", "fix", "hotfix", "chore", "docs", "refactor", "test"]
schema_pattern = "(build|chore|ci|docs|feature|feat|fix|hotfix|perf|refactor|style|test|config)(\\(.+\\))?!?: .+"

[tool.commitizen.schema_mapping]
feature = "feat"
hotfix = "fix"
config = "chore"

[[tool.commitizen.customize.questions]]
type = "list"
name = "type"
message = "Commit type?"
choices = [
    { value = "feat", name = "feature" },
    { value = "fix", name = "hotfix" },
    { value = "chore", name = "config" },
    { value = "refactor", name = "refactor" },
    { value = "docs", name = "docs" },
    { value = "test", name = "tests" },
    { value = "chore", name = "chore/other" },
]

[tool.commitizen.change_type_map]
feat = "Features"
fix = "Bug Fixes"
hotfix = "Hotfixes"
chore = "Chores"
docs = "Documentation"
refactor = "Refactors"
test = "Tests"
